--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sitio Principal de Venta de Gaming</title>
     <link rel="shortcut icon" href="img/logoweb.png">                                           <!-- Logo en la parte de arriba del navegador -->
     <link rel="stylesheet" type="text/css" href="css/estilo.css">                               <!-- link hacia mi css -->
+    <link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">                                 <!-- agregar la fuente desde google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>                        <!-- agregar la fuente desde google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet"> <!-- agregar la fuente desde google fonts-->
@@ -128,6 +129,8 @@
     <script src="js/catalogo.js"></script>
     <script src="js/botones.js"></script>
     <script src="js/app.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="sweetalert2/dist/sweetalert2.min.js"></script>
 </body>
 </html>
 
