ajustando las imagenes

--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
            para los problemas que puedas tener, podes contactarnos atraves de nuestra pagina<br />
              </p>
              <h2 class="subtitulo">Ofertas</h2>
-             <div class="imagenes container-fluid">
-                <h1>Catalogo</h1>
-                <div id="catalogo" class="row"></div>
+             <div class="imagenes container-fluid">                <div id="catalogo" class="row"></div>
                 <hr />
                 <h1>Total a pagar $<span id="precioTotal"></span></h1>
                 <div id="carrito" class="row"></div>
